--- a/deploy/server/Dockerfile
+++ b/deploy/server/Dockerfile
@@ -1,4 +1,5 @@
 FROM crystallang/crystal
+RUN echo "touch4"
 RUN apt-get update
 RUN apt-get install -y git nano wget
 
@@ -12,7 +13,7 @@ RUN wget -nv https://download.opensuse.org/repositories/network:messaging:zeromq
 RUN apt-key add - < Release.key
 RUN apt-get install -y libzmq3-dev
 
-RUN echo "version=27"
+ENV version=30
 RUN git clone https://blitline-dev:CHB4URXWTh@github.com/blitline-dev/allq.git
 RUN cd allq && /usr/bin/shards && crystal build src/all_q/server/server.cr --release -o allq_server
 RUN cd allq && chmod 777 allq_server && mv allq_server /usr/bin/allq_server
