Moved to alpine ruby for etcd

--- a/deploy/etc/Dockerfile
+++ b/deploy/etc/Dockerfile
@@ -1,11 +1,9 @@
-FROM blitline/allq:client_latest
+FROM ruby:2.5-alpine
 
-RUN apt-get update
 RUN which ruby
-
 RUN gem install etcdv3
 
-ENV version=28
+ENV version=32
 COPY ruby_updater.rb ruby_updater.rb
 
-ENTRYPOINT ["/opt/rubies/ruby-2.5.1/bin/ruby", "ruby_updater.rb"]
+ENTRYPOINT ["/usr/local/bin/ruby", "ruby_updater.rb"]
