Fix for server error when parent expires before child completes

--- a/deploy/client/Dockerfile
+++ b/deploy/client/Dockerfile
@@ -18,12 +18,14 @@ RUN apt-get install -y socat
 RUN wget -O ruby-install-0.7.0.tar.gz https://github.com/postmodern/ruby-install/archive/v0.7.0.tar.gz
 RUN tar -xzvf ruby-install-0.7.0.tar.gz
 RUN  cd ruby-install-0.7.0/ &&  make install
-RUN ruby-install ruby 2.5
-ENV PATH /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/rubies/ruby-2.5.1/lib:/opt/rubies/ruby-2.5.1/bin
+RUN ruby-install ruby 2.5.3
+ENV PATH /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/rubies/ruby-2.5.1/lib:/opt/rubies/ruby-2.5.3/bin
+
 RUN ruby -v
+
 RUN gem install bundler
 
-ENV version=92
+ENV version=98
 
 RUN cd /
 COPY stats.sh stats.sh
@@ -31,6 +33,8 @@ RUN chmod 777 stats.sh
 RUN git clone https://blitline-dev:***REMOVED***@github.com/blitline-dev/allq.git
 RUN cd allq && /usr/bin/shards && crystal build src/all_q/client/client.cr --release -o allq_client
 RUN cd allq && chmod 777 allq_client && mv allq_client /usr/bin/allq_client
+RUN git clone https://github.com/blitline-dev/allq_cli.git
+RUN cd allq_cli && bundle install
 
 
 ENTRYPOINT ["/usr/bin/allq_client"]
