--- a/shard.yml
+++ b/shard.yml
@@ -14,6 +14,8 @@ license: MIT
 
 dependencies:
   zeromq:
-    github: benoist/zeromq-crystal
+    github: crystal-community/zeromq-crystal
   kemal:
     github: kemalcr/kemal
+
+
