--- a/shard.yml
+++ b/shard.yml
@@ -14,6 +14,6 @@ license: MIT
 
 dependencies:
   zeromq:
-    github: blitline-dev/zeromq-crystal
+    github: Jaciones/zeromq-crystal
   kemal:
     github: kemalcr/kemal
