--- a/deploy/server/Dockerfile
+++ b/deploy/server/Dockerfile
@@ -1,8 +1,7 @@
 FROM crystallang/crystal:0.35.1
-RUN echo "touch5"
+RUN echo "touch6"
 
 RUN apt-get update
-
 
 RUN apt-get install -y git nano wget
 
@@ -14,8 +13,8 @@ ENV VERSION=127
 RUN echo $(crystal -v)
 ENV VERSION=128
 
-RUN git clone https://blitline-dev:CHB4URXWTh@github.com/blitline-dev/allq.git
-RUN cd allq && shards
+RUN git clone -b original_zero https://blitline-dev:CHB4URXWTh@github.com/blitline-dev/allq.git
+RUN cd allq && shards install
 RUN cd allq && sed -i 's/FFI::MemoryPointer.*$/" " * 41/g' lib/zeromq/src/zeromq/util.cr && sed -i 's/\.read_string//g' lib/zeromq/src/zeromq/util.cr
 
 RUN echo $(crystal -v)
@@ -23,6 +22,5 @@ RUN cd allq && crystal build src/all_q/server/server.cr --release -o allq_server
 
 
 RUN cd allq && chmod 777 allq_server && mv allq_server /usr/bin/allq_server
-RUN apt-get -y upgrade
 
 ENTRYPOINT ["/usr/bin/allq_server"]
