--- a/deploy/client/Dockerfile
+++ b/deploy/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM crystallang/crystal:0.33.0
+FROM crystallang/crystal:0.35.1
 RUN echo "touch4"
 RUN apt-get update
 RUN apt-get install -y git nano wget
@@ -22,14 +22,14 @@ RUN ruby -v
 RUN gem install bundler -v 1.16.3 && gem update --system
 
 
-ENV version=134
+ENV version=137
 
 RUN cd /
 COPY stats.sh stats.sh
 COPY cli.sh cli.sh
 RUN chmod 777 stats.sh
 RUN chmod 777 cli.sh
-RUN git clone https://blitline-dev:***REMOVED***@github.com/blitline-dev/allq.git
+RUN git clone -b original_zero https://blitline-dev:***REMOVED***@github.com/blitline-dev/allq.git
 RUN cd allq && /usr/bin/shards && crystal build src/all_q/client/client.cr --release -o allq_client
 RUN cd allq && chmod 777 allq_client && mv allq_client /usr/bin/allq_client
 RUN git clone https://github.com/blitline-dev/allq_cli.git
