--- a/deploy/server/Dockerfile
+++ b/deploy/server/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get install -y socat
 
 ENV VERSION=127
 RUN echo $(crystal -v)
+RUN apt-get dist-upgrade -y
 ENV VERSION=129
 
 RUN git clone -b master https://github.com/blitline-dev/allq.git
