Updated Kemal. Added http webservice healthcheck as well

--- a/deploy/client/Dockerfile
+++ b/deploy/client/Dockerfile
@@ -8,23 +8,23 @@ RUN apt-get install -y libtool pkg-config build-essential autoconf automake uuid
 
 
 RUN apt-get install -y  libsodium-dev libzmq3-dev
-RUN apt-get install -y socat
+RUN apt-get install -y socat curl
 
-# install ruby
-RUN wget -O ruby-install-0.7.0.tar.gz https://github.com/postmodern/ruby-install/archive/v0.7.0.tar.gz
-RUN tar -xzvf ruby-install-0.7.0.tar.gz
-RUN  cd ruby-install-0.7.0/ &&  make install
-RUN ruby-install ruby 2.5.3
-ENV PATH /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/opt/rubies/ruby-2.5.1/lib:/opt/rubies/ruby-2.5.3/bin
+
+RUN echo "deb https://apt.fullstaqruby.org ubuntu-20.04 main" > "/etc/apt/sources.list.d/fullstaq-ruby.list"
+RUN curl -SLfO https://raw.githubusercontent.com/fullstaq-labs/fullstaq-ruby-server-edition/main/fullstaq-ruby.asc \
+  && apt-key add fullstaq-ruby.asc \
+  && apt update \
+  && apt install -y fullstaq-ruby-common \
+  && apt install -y fullstaq-ruby-2.6
+  
+ENV PATH /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/lib/fullstaq-ruby/versions/2.6/bin
 
 RUN ruby -v
 
 RUN gem install bundler -v 1.16.3 && gem update --system
-RUN apt-get install -y curl
-
-
 RUN apt-get dist-upgrade -y
-ENV version=161
+ENV version=171
 
 RUN cd /
 
@@ -34,12 +34,12 @@ RUN cd allq && chmod 777 allq_client && mv allq_client /usr/bin/allq_client
 RUN git clone https://github.com/blitline-dev/allq_cli.git
 RUN cd allq_cli && bundle install && bundle update
 
-ENV version=107
-
+COPY http_stat.sh http_stat.sh
 COPY stats.sh stats.sh
 COPY up.sh up.sh
 COPY cli.sh cli.sh
 COPY healthcheck.sh healthcheck.sh
+RUN chmod 777 http_stat.sh
 RUN chmod 777 stats.sh
 RUN chmod 777 cli.sh
 RUN chmod 777 up.sh
